<resources>
    <string name="app_name">nmedia</string>
    <string name="nmedia">NMedia!</string>
    <string name="avatar" translatable="false">avatar</string>
    <string name="messageText" translatable="false">Нетология. Университет интернет-профессий.</string>
    <string name="messageDate">5 ноября в 17:10</string>
    <string name="message" translatable="false">Привет, это новая Нетология! Когда-то Нетология начиналась с интенсивов по онлайн-маркетингу. Затем появились курсы по дизайну, разработке, дизайну, аналитике и управлению. Мы растём сами и помогаем студентам: от новичков до уверенных профессианалов. Но самое важноеостаётся с нами: мы верим, что в каждом уже есть сила, которая заставляет хотеть больше, целиься точнее, бежать быстрее. Наша миссия - помочь встать на путь роста и начать цепочку перемен.</string>
    <string name="likesCounter" translatable="false">54</string>
    <string name="shareCounter" translatable="false">3</string>
    <string name="viewsCounter" translatable="false">112</string>
    <string name="remove">Remove</string>
    <string name="save" translatable="false">Save</string>
    <string name="error_message">Cannot be empty</string>
    <string name="edit">Edit</string>
    <string name="undo" translatable="false">undo</string>
    <string name="ic_edit" translatable="false">ic_edit</string>
    <string name="edit_message">Edit Message</string>
    <string name="share_button" translatable="false">Share button</string>
    <string name="menu_icon" translatable="false">Menu icon</string>
    <string name="like_button" translatable="false">Like button</string>
    <string name="view_icon" translatable="false">View icon</string>
    <string name="video_image" translatable="false">Video image</string>
    <string name="play_button" translatable="false">Play button</string>
    <string name="savebutton" translatable="false">SaveButton</string>
    <string name="channel_remote_name">Server notification</string>
    <string name="channel_remote_description">Notification from remote server</string>
    <string name="notification_user_liked">User %1$s liked %2$s\'s post</string>
    <string name="notification_new_post">User %1$s add post</string>
    <string name="empty">Empty</string>
    <string name="error_text">Something went wrong</string>
    <string name="retry">RETRY</string>
</resources>