<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_constraintVertical_chainStyle="spread"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/ic_netology_48dp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:contentDescription="@string/avatar"
        app:barrierDirection="bottom"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/messageText"
        app:layout_optimizationLevel="barrier"
        app:srcCompat="@drawable/ic_netology_48dp" />

    <TextView
        android:id="@+id/messageText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:ellipsize="end"
        android:singleLine="true"
        android:text="@string/messageText"
        app:barrierDirection="bottom"
        app:layout_constraintStart_toEndOf="@+id/ic_netology_48dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_optimizationLevel="barrier" />

    <ImageView
        android:id="@+id/moreVert"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="dots"
        app:layout_constraintBottom_toBottomOf="@+id/messageText"
        app:layout_constraintStart_toEndOf="@+id/messageText"
        app:layout_constraintTop_toTopOf="@+id/messageText"
        app:srcCompat="@drawable/baseline_more_vert_24" />

    <TextView
        android:id="@+id/messageDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/messageDate"
        app:barrierDirection="bottom"
        app:layout_constraintStart_toEndOf="@+id/ic_netology_48dp"
        app:layout_constraintTop_toBottomOf="@+id/messageText"
        app:layout_optimizationLevel="barrier" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nmedia"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="0dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/messageDate">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:text="@string/message"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>